--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,8 @@ h2{
     height: 100vh;
     width: 100vw;
     background: #ffffff;
+
+    z-index: 1;
 }
 .screen-box{
     margin: auto;
@@ -40,6 +42,7 @@ h2{
     line-height: 50px;
     text-align: center;
     background: #eee;
+    z-index: 99;
 }
 /***Specific-Rules*/
 .screen.hello-screen{
