--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,41 @@ footer a{
     text-align: center;
     background: #eee;
     z-index: 99;
+    box-shadow: 0px 1px 5px 1px #cecece;
+}
+.menu-box{
+    display: block;
+}
+.logo{
+    height: 50px;
+    padding: 10px;display: block;
+    float: left;
+}
+.logo img{
+    height: 100%;
+}
+.nav-box{
+    float: right;
+    display: flex;
+    justify-content: space-around;
+}
+.nav-link-holder{
+    line-height: 70px;
+    margin: 0 20px;
+    padding: 0 10px;
+    cursor: pointer;
+    transition: .3s;
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+}
+.nav-link-holder:hover{
+    background: #ded1d5;
+}
+.nav-link-holder a{
+    color: #212020;
+}
+.nav-link-holder.active a{
+    font-weight: bolder;
 }
 .flex-text-left-image{
     display: flex;
