--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ footer a{
     -moz-transition: .3s;
 }
 .nav-link-holder:hover{
-    background: #ded1d5;
+    background: #d1d1d1;
 }
 .nav-link-holder a{
     color: #212020;
